# texas-holdem-in-cpp

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  main.cpp  thd.Dockerfile
Algorithms/: CMakeLists.txt  Random.h
Algorithms/Card/: CMakeLists.txt  CardComparison.cpp  CardComparison.h  CardComparison_Test.cpp  CardSelection.cpp  CardSelection.h  CardSelection_Test.cpp  CardSelector.cpp  CardSelector.h  CardSelector_Test.cpp  CardType.cpp  CardType.h  CardType_Test.cpp
Algorithms/PokerHand/: CMakeLists.txt  HandComparison.cpp  HandComparison.h  HandComparison_Test.cpp  HandSelection.cpp  HandSelection.h  HandSelection_Test.cpp  HandType.cpp  HandType.h  HandType_Test.cpp
Algorithms/Random/: CMakeLists.txt  Random.cpp  Random.h
Card/: CMakeLists.txt  CardComparison.cpp  CardDeck.cpp  CardDeck.h  CardSelector.cpp  CardType.cpp  CardType.h  HandCard.cpp  HandCard.h  PokerCard.cpp  PokerCard.h
Chip/: CMakeLists.txt  Chip.cpp  Chip.h
Common/: CMakeLists.txt
Common/Logger/: CMakeLists.txt  Logger.h  LoggerInitialiser.cpp  LoggerInitialiser.h
Core/: CMakeLists.txt
Core/Game/: CMakeLists.txt  ChipAllocation.cpp  ChipAllocation.h  Game.cpp  Game.h  GameSettlement.cpp  GameSettlement.h  GameTable.cpp  GameTable.h
Core/Player/: AutoPlayer.cpp  AutoPlayer.h  BasePlayer.cpp  BasePlayer.h  HumanPlayer.cpp
Core/Strategy/: CMakeLists.txt  StartingHand.cpp  StartingHand.h
Docker/: .env  Docker.md  dock-setup.sh  thd.Dockerfile
Entity/: CMakeLists.txt
Entity/Card/: CMakeLists.txt  CardDeck.cpp  CardDeck.h  PokerCard.cpp  PokerCard.h
Entity/Chip/: CMakeLists.txt  Chip.cpp  Chip.h
Entity/Score/: CMakeLists.txt  Score.cpp  Score.h
GUI/: CMakeLists.txt  GUIMainWindow.cpp  GUIMainWindow.h  GUIMainWindow.ui  main.cpp
Game/: CMakeLists.txt  ChipAllocation.cpp  ChipAllocation.h  Game.cpp  Game.h  GameProcess.cpp  GameProcess.h  GameSettlement.cpp  GameSettlement.h  GameTable.cpp  GameTable.h
Player/: AutoPlayer.cpp  AutoPlayer.h  BasePlayer.cpp  BasePlayer.h  CMakeLists.txt  HumanPlayer.cpp  HumanPlayer.h  PlayerUtilities.cpp  PlayerUtilities.h
Scripts/Git/: commit-msg  prepare-commit-msg
Strategy/: StartingHand.cpp  StartingHand.h
Test/: CMakeLists.txt
Utilities/: Constants.h
config/: Game.json
docker/: Docker.md  dock-setup.sh  docker-compose.yml
